Fix double drop cap on mobile

--- a/assets/scss/typographical/_tweaks.scss
+++ b/assets/scss/typographical/_tweaks.scss
@@ -118,8 +118,8 @@ footer {
     font-size: 2.5em;
   }
 
-  .post > p:first-of-type::first-letter {
-    font-size: 5.35em;
+  .post .drop-cap {
+    font-size: 5.2em;
   }
 
   .nav-title {
